# SPARK

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  MainWindow.cpp  MainWindow.hpp  main.cpp  resources.qrc
src/: main.rs  proof.rs
winterfell-ffi/: Cargo.toml
winterfell-ffi/src/: lib.rs
